More small adjustmentst this time on the images

--- a/solution.html
+++ b/solution.html
@@ -151,7 +151,7 @@
   <section id="section-2" class="pagesection reveal fade">
     <div class="content">
       <div class="visuals reveal fade">
-        <img src="/img/roles.png" alt="">
+        <img src="/img/roles.png" alt="" style="max-width: 300px;">
       </div>
       <div class="descriptions reveal fade">
         <div class="title">
