Fixing the text

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <div class="text">
                         Valluu dramatically reduces the current dependence on scare IT resources and the knowledge residing in the too few key individuals. Removing the need for constant requests and time consuming interaction with the IT function, the end-to-end process is
                         streamlined back to the business users and their direct interaction with the required data, both creating and scheduling. Valluu monitors, in real-time, the IT infrastructure and automatically runs the required data workloads,
-                        without the need of human interaction. This vastly improves the optimisation of the IT infrastructure, reducing operating and management costs and directly reducing the production energy and the associated CO2 emissions.F
+                        without the need of human interaction. This vastly improves the optimisation of the IT infrastructure, reducing operating and management costs and directly reducing the production energy and the associated CO2 emissions.
                     </div>
                 </div>
             </div>
