--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="keywords" content="kubernetes, data workloads, workload, workloads, data, processing, data processing, valluu"/>
+    <meta name="author" content="Valluu" />
+ 
     <meta property="og:title" content="Valluu - Data Workload Democratization in Kubernetes" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://drectio.github.io/index.html" />
