--- a/index.html
+++ b/index.html
@@ -235,11 +235,6 @@
                         <div class="subtitle " style="color:rgb(243, 152, 140);">
                             <span class="button navestimator">Play the video &nbsp; &nbsp; <i class="fas fa-play"></i>
                             </span>
-                            <!--
-                            <img src="img/arrowdown.svg" class="" style="transform: rotate(-90deg); width: 30px"> 
-                            &nbsp; Play the video! &nbsp; 
-                            <img src="img/arrowdown.svg" class="" style="transform: rotate(-90deg); width: 30px">
-                            -->
                         </div>
                     </a>
 
@@ -469,8 +464,12 @@
                 </div>
                 <div class="visuals reveal fade">
                     <a href="/img/solutionoverview.svg" data-fancybox="images">
-                        <img src="/img/solutionoverview.svg" alt="" style="max-width: 500px;">
+                        <img src="/img/solutionoverview.svg" alt="" style="max-width: 500px; margin-left: 20px;">
                     </a>
+                    <br/>
+                    <div class="notes">
+                        (click the image to see it larger)
+                    </div>
                 </div>
             </div>
         </div>
