Update image for operational valur realisation

--- a/index.html
+++ b/index.html
@@ -278,20 +278,7 @@
                     </div>
                 </div>
                 <div class="visuals reveal fade">
-                    <div class="operationalvaluerealisation">
-                        <div class="category" style="--c: #E84249;">
-                            <img src="img/icon2-prod.png" style="height:30px;">
-                            <span style="color: #ffffff;">Productivity</span>
-                        </div>
-                        <div class="category" style="--c: #62BDA4;">
-                            <img src="img/icon2-sust.png" style="height:30px;">
-                            <span style="color: #ffffff;">Sustainability</span>
-                        </div>
-                        <div class="category" style="--c: #092168;">
-                            <img src="img/icon2-oper.png" style="height:30px;">
-                            <span style="color: #ffffff;">Operational Costs</span>
-                        </div>
-                    </div>
+                    <img src="img/operationalvaluerealisation.svg">
                 </div>
             </div>
         </div>
