Update to og:url

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <meta property="og:title" content="Valluu - Data Workload Democratization in Kubernetes" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://drectio.github.io/index.html" />
-    <meta property="og:image" content="https://drectio.github.io/img/estimatorss.png" />
+    <meta property="og:url" content="https://www.valluu.io/index.html" />
+    <meta property="og:image" content="https://www.valluu.io/img/estimatorss.png" />
     <meta property="og:description"
         content="75% of employees are restricted when working with data (The Human impact of Data Literacy - Report 2020 - Accenture), Valluu eliminates these barriers and provides instant major returns on the direct bottom line." />
 
