Update metatags for social media sharing

--- a/index.html
+++ b/index.html
@@ -11,12 +11,28 @@
         content="kubernetes, data workloads, workload, workloads, data, processing, data processing, valluu" />
     <meta name="author" content="Valluu" />
 
+    <!-- Share throught links -->
     <meta property="og:title" content="Valluu - Data Workload Democratization in Kubernetes" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.valluu.io/index.html" />
     <meta property="og:image" content="https://www.valluu.io/img/estimatorss.png" />
     <meta property="og:description"
         content="75% of employees are restricted when working with data (The Human impact of Data Literacy - Report 2020 - Accenture), Valluu eliminates these barriers and provides instant major returns on the direct bottom line." />
+
+    <!-- Share throught twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Valluu - Data Workload Democratization in Kubernetes" />
+    <meta name="twitter:url" content="https://www.valluu.io/index.html" />
+    <meta name="twitter:description" 
+        content="75% of employees are restricted when working with data (The Human impact of Data Literacy - Report 2020 - Accenture), Valluu eliminates these barriers and provides instant major returns on the direct bottom line." />
+    <meta name="twitter:image" content="https://www.valluu.io/img/estimatorss.png" />
+
+    <!-- Share throught linkedin, google+, pinterest -->
+    <html itemscope itemtype="http://schema.org/Article">
+    <meta itemprop="name" content="Valluu - Data Workload Democratization in Kubernetes" />
+    <meta itemprop="description" 
+        content="75% of employees are restricted when working with data (The Human impact of Data Literacy - Report 2020 - Accenture), Valluu eliminates these barriers and provides instant major returns on the direct bottom line." />
+    <meta itemprop="image" content="https://www.valluu.io/img/estimatorss.png" />
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
 
