--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="title">Data Democratisation in Kubernetes. Processing, transformation, or movement of your data.
             </div>
             <div class="navigation">
-                <a href="#about">
+                <a href="#section-7">
                     <span class="button navabout">
                         <i class="fas fa-angle-down"></i> The solution</span>
                 </a>
@@ -467,13 +467,10 @@
                     </div>
                 </div>
                 <div class="visuals reveal fade">
-                    <a href="/img/solutionoverview.svg" data-fancybox="images">
+                    <a href="/img/solutionoverviewisolated.svg" data-fancybox="images">
                         <img src="/img/solutionoverview.svg" alt="" style="max-width: 500px; margin-left: 20px;">
                     </a>
                     <br />
-                    <div class="notes">
-                        (click the image to see it larger)
-                    </div>
                 </div>
             </div>
         </div>
