Small CSS changes on layout

--- a/index.html
+++ b/index.html
@@ -87,17 +87,19 @@
             <div class="logo">
                 <image src="img/valluu.svg"></image>
             </div>
-            <div class="title">Data Democratisation in Kubernetes. Processing, transformation, or movement of your data.
+            <div class="title">Business value realisation through data workload management in Kubernetes
             </div>
             <div class="navigation">
                 <a href="#estimator">
-                    <span class="button navestimator">Value estimator <i class="fas fa-angle-right"></i>
+                    <span class="button navestimator"><span style='color:#E84249 '>LOGO</span> estimator <i class="fas fa-angle-right"></i>
                     </span>
                 </a>
+                <!--
                 <a href="#section-7">
                     <span class="button navabout">
                         <i class="fas fa-angle-down"></i> The solution</span>
                 </a>
+                -->
             </div>
         </div>
         <div class="arrow">
