Removing the arrows except for the first section

--- a/index.html
+++ b/index.html
@@ -163,13 +163,6 @@
         </div>
     </section>
 
-    <div class="arrow right container">
-        <a href="#about" class="reveal">
-            <image src="img/arrowdown-blue.svg"></image>
-        </a>
-    </div>
-
-
 
     <!-- Data Workload Democratisation for all CTx -->
 
@@ -203,11 +196,6 @@
         </div>
     </section>
 
-    <div class="arrow left container ">
-        <a href="#about" class="reveal">
-            <image src="img/arrowdown-blue.svg"></image>
-        </a>
-    </div>
 
     <!-- Video  -->
 
@@ -276,11 +264,6 @@
             </div>
         </div>
 
-        <div class="arrow right container">
-            <a href="#about  class=" reveal "">
-                <image src="img/arrowdown-blue.svg"></image>
-            </a>
-        </div>
 
     </section>
 
@@ -320,18 +303,13 @@
             </div>
         </div>
 
-        <div class="arrow left">
-            <a href="#about">
-                <image src="img/arrowdown-blue.svg"></image>
-            </a>
-        </div>
     </section>
 
     <!-- Estimator  -->
 
     <section id="estimator" class="pagesection estimator">
         <div class="title">
-            Value Estimator
+            Valluu Estimator
         </div>
         <div id="estimatorsection">
 
@@ -464,13 +442,6 @@
 
 
     </section>
-
-
-    <div class="arrow right container">
-        <a href="#about" class="reveal">
-            <image src="img/arrowdown-blue.svg"></image>
-        </a>
-    </div>
 
     <!-- Solution Overview -->
 
