Chahnge color of text in estimator title

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <section id="estimator" class="pagesection estimator">
         <div class="title">
-            Valluu Estimator
+            <span style="color:var(--vred);">Valluu</span> Estimator
         </div>
         <div id="estimatorsection">
 
