Updates after feedback

--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
 
 <body>
 
-    <!-- Intro  -->
-
     <section id="intro" class="intro">
         <div class="databasecloud ">
             <image src="img/dataworkloadslifecycle.svg"></image>
@@ -90,12 +88,14 @@
             <div class="title">Business value realisation through data workload management in Kubernetes
             </div>
             <div class="navigation">
+                <!--
                 <a href="#estimator">
                     <div class="button navestimator">
                         <image src="img/valluu-red.svg"></image> <span> estimator <i
                                 class="fas fa-angle-right"></i></span>
                     </div>
                 </a>
+                -->
                 <!--
                 <a href="#section-7">
                     <span class="button navabout">
@@ -105,16 +105,14 @@
             </div>
         </div>
 
+        <!--
         <div class="arrow left">
             <a href="#about">
                 <image src="img/arrowdown-blue.svg"></image>
             </a>
         </div>
+    -->
     </section>
-
-
-
-    <!-- Intro Bar Header  -->
 
     <section id="introheader" class="introheader">
         <div class="content">
@@ -129,9 +127,6 @@
         </div>
     </section>
 
-
-    <!-- About  -->
-
     <section id="about" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
@@ -140,7 +135,7 @@
                 </div>
                 <div class="descriptions">
                     <div class="title">
-                        Intelligent Business Software
+                        Intelligent business software
                     </div>
                     <div class="subtitle">
                         <p>Leveraging the power of Kubernetes
@@ -166,9 +161,6 @@
             </div>
         </div>
     </section>
-
-
-    <!-- Data Workload Democratisation for all CTx -->
 
     <section id="section-3" class="pagesection reveal fade">
         <div class="content">
@@ -203,8 +195,6 @@
         </div>
     </section>
 
-    <!-- Use Cases - Use Case 2 -->
-
     <section id="section-4" class="pagesection">
         <div class="democratization container">
             <div class="content">
@@ -213,7 +203,7 @@
                 </div>
                 <div class="descriptions reveal fade">
                     <div class="title">
-                        Intelligent Business Operations
+                        Intelligent business operations
                     </div>
                     <div class="subtitle">
                         Protecting your current & future investments
@@ -240,15 +230,10 @@
         </div>
     </section>
 
-
-
-
-    <!-- Use Cases - Use Case 2 -->
-
     <section id="section-5" class="pagesection">
         <div class="democratization container">
             <div class="content">
-               
+
                 <div class="descriptions reveal fade">
                     <div class="title">
                         Intelligent business in motion
@@ -277,7 +262,6 @@
                         the
                         profile of the new-price-adopters.
                     </div>
-
                     <a data-fancybox data-width="640" data-height="360" href="videos/introvideo.mp4">
                         <div class="subtitle " style="color:rgb(243, 152, 140);">
                             <span class="button navestimator">Play the video &nbsp; &nbsp; <i class="fas fa-play"></i>
@@ -293,15 +277,12 @@
         </div>
     </section>
 
-
-    <!-- Estimator  -->
-
     <section id="estimator" class="pagesection estimator">
         <div class="title">
-            <span style="color:var(--vred);">Valluu</span> Estimator
+            Operational Cost Saving Estimator
+
         </div>
         <div id="estimatorsection">
-
             <div id="overlay" onclick="closePopup();">
             </div>
             <div id="popup">
@@ -342,26 +323,21 @@
             <div id="infobox">
             </div>
 
-            <div class="des-b"><br /><br /><br /><br /></div>
+            <br /><br /><br /><br />
 
             <div id="main">
 
-                <div id="welcome-note" class="mob-b">
-                    <br />
-                    <h3 style="color: var(--vred);">Getting Started</h3>
-                    <p>Based upon your business needs, select one, several, or all of the categories below and
-                        input
-                        your data to estimate how much Valluu can save you.</p>
-                </div>
+              
                 <div id="estimator">
                     <div>
 
                         <div id="welcome-note" class="des-b">
-                            <br />
-                            <h3 style="color: var(--vred); margin-top: 0;">Getting Started</h3>
-                            <p>Based upon your business needs, select one, several, or all of the categories
-                                below and
-                                input your data to estimate how much Valluu can save you.</p>
+                            <div class="subtitle">Getting Started</div>
+                            <p>Each selection choice will build the potential cost savings you could realise by
+                                implementing Valluu. After making your selections, run the Report to see the breakdown
+                                of the potential savings. The Report will be sent to your designated eMail, submitted
+                                via the Contact section.
+                            </p>
                         </div>
 
                         <div id="usecases">
@@ -428,20 +404,13 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
-
     </section>
-
-    <!-- Solution Overview -->
 
     <section id="section-7" class="pagesection">
         <div class="solutionoverview container">
             <div class="content">
-
                 <div class="descriptions reveal fade">
                     <div class="title">
                         Solution overview
@@ -471,6 +440,12 @@
                         utilisation, spend & control of existing IT assets.
 
                     </div>
+                    <a data-fancybox data-width="640" data-height="360" href="videos/introvideo.mp4">
+                        <div class="subtitle " style="color:rgb(243, 152, 140);">
+                            <span class="button navestimator">Play the video &nbsp; &nbsp; <i class="fas fa-play"></i>
+                            </span>
+                        </div>
+                    </a>
                 </div>
                 <div class="visuals reveal fade">
                     <a href="/img/solutionoverviewisolated.svg" data-fancybox="images">
@@ -478,7 +453,9 @@
                     </a>
                     <br />
                 </div>
+
             </div>
+
         </div>
     </section>
 
