Adding 75% kubernetes section and update flow diagram image

--- a/index.html
+++ b/index.html
@@ -127,7 +127,39 @@
         </div>
     </section>
 
-    <section id="about" class="pagesection">
+
+    <section id="section-2" class="pagesection">
+        <div class="container reveal fade-bottom">
+            <div class="content">
+                <div class="visuals">
+                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+                </div>
+                <div class="descriptions">
+                    <div class="title">
+                        75% of employees are restricted when working with data*
+                    </div>
+                    <div class="subtitle">
+                        <p>Valluu enables data democratisation, eliminates the restrictions, and provides instant
+                            business return
+                        </p>
+                    </div>
+                    <div class="text">
+                        Anyone can use data at anytime, to enable business decisions, by removing complex barriers of
+                        access and understanding. Currently, every business function works off a fragment of the big
+                        picture and lacks the ability to fully benefit from data pipeline
+                        management functionality on Cloud & Kubernetes.
+                    </div>
+                    <div class="notes">
+                        <p>*The Human impact of Data Literacy - Report 2020 - Accenture</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aboutarrow">
+            </div>
+        </div>
+    </section>
+
+    <section id="section-3" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
@@ -162,7 +194,7 @@
         </div>
     </section>
 
-    <section id="section-3" class="pagesection reveal fade">
+    <section id="section-4" class="pagesection reveal fade">
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
@@ -195,7 +227,7 @@
         </div>
     </section>
 
-    <section id="section-4" class="pagesection">
+    <section id="section-5" class="pagesection">
         <div class="democratization container">
             <div class="content">
                 <div class="visuals reveal fade">
@@ -235,7 +267,7 @@
         </div>
     </section>
 
-    <section id="section-5" class="pagesection">
+    <section id="section-6" class="pagesection">
         <div class="solutionoverview container">
             <div class="content">
                 <div class="descriptions reveal fade">
@@ -286,7 +318,7 @@
         </div>
     </section>
 
-    <section id="section-6" class="pagesection">
+    <section id="section-7" class="pagesection">
         <div class="democratization container">
             <div class="content">
                 <div class="visuals reveal fade">
@@ -320,7 +352,7 @@
         </div>
     </section>
 
-    <section id="section-7" class="pagesection">
+    <section id="section-8" class="pagesection">
         <div class="democratization container">
             <div class="content">
 
@@ -367,7 +399,7 @@
         </div>
     </section>
 
-    <section id="section-8" class="pagesection diagram">
+    <section id="section-9" class="pagesection diagram">
         <div class="title">
             Intelligent Business Software
         </div>
