Remaining changes discussed on the call

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
-                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+                    <image class="reveal fade" src="img/waiting-3.png" style="max-height: 400px;"></image>
                 </div>
                 <div class="descriptions">
                     <div class="title">
@@ -473,7 +473,7 @@
 
                 </div>
                 <div class="visuals reveal fade">
-                    <img src="/img/refactor.png" alt="">
+                    <img src="/img/refactor-2.png" alt="">
                 </div>
             </div>
 
@@ -496,8 +496,7 @@
                     <div class="text">
                         Valluu is designed to leverage the companies investment
                         in operational and information technologies. This achieves major operational efficiencies
-                        through reduced labour time, maximisation of IT infrastructure, without the need to wait
-                        for additions or expansions.
+                        through reduced labour time & maximisation of IT infrastructure.
                     </div>
                     <!--
                     <div class="text">
@@ -513,6 +512,9 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="" class="section-separator">
     </section>
 
     <section id="estimator" class="pagesection estimator">
@@ -642,14 +644,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="section-9" class="pagesection">
-        <div class="solutionoverview container">
-            <div class="content" style="">
-
             </div>
         </div>
     </section>
