Update technical video link

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
                     </div>
                     -->
-                    <a data-fancybox data-width="640" data-height="360" href="videos/introvideo.mp4">
+                    <a data-fancybox data-width="640" data-height="360" href="videos/technicalvideo.mp4">
                         <div class="subtitle " style="color:rgb(243, 152, 140);">
                             <span class="button navestimator">Play the video &nbsp; &nbsp; <i class="fas fa-play"></i>
                             </span>
