--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <div id="estimator">
                     <div>
 
-                        <div id="welcome-note" class="des-b">
+                        <div id="welcome-note">
                             <div class="subtitle">Getting Started</div>
                             <p>Please select your business size to estimate the savings that using Valluu
                               could deliver to your business.
