Remove estimated employee numbers in estimator

--- a/index.html
+++ b/index.html
@@ -640,13 +640,13 @@
                         <div id="usecases">
                           <div class="category-group">
                               <div class="usecase clickable" id="size-0" onclick="setPreset(0);" style="--c: #eeeeee;">
-                                  <div>Small<span class="note"><br /><br />(<50 employees)</span></div>
+                                  <div>Small</div>
                               </div>
                               <div class="usecase clickable" id="size-1" onclick="setPreset(1);" style="--c: #eeeeee;">
-                                  <div>Medium<span class="note"><br /><br />(50-249 employees)</span></div>
+                                  <div>Medium</div>
                               </div>
                               <div class="usecase clickable" id="size-2" onclick="setPreset(2);" style="--c: #eeeeee;">
-                                  <div>Large<span class="note"><br /><br />(≥250 employees)</span></div>
+                                  <div>Large</div>
                               </div>
                           </div>
                         </div>
