Update index to have an image on the text

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="subtitle">
                         <p>
-                           * 75% of employees are restricted when working with data
+                            * 75% of employees are restricted when working with data
                         </p>
                     </div>
                     <div class="text">
@@ -360,7 +360,8 @@
                 </div>
                 <div class="text">
                     By starting from the viewpoint of the business decision maker, Valluu allows the business user to
-                    create data workloads with simple drag & drop functionality, that can then be dynamically applied.
+                    create <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> data
+                    workloads with simple drag & drop functionality, that can then be dynamically applied.
                 </div>
                 <!--
                 <div class="text">
@@ -404,7 +405,8 @@
                         6PM
                         on Friday, when the weekend-price-status is set. The Underwriter then receives a
                         notification to
-                        say the data workload was run and the results automatically stored in their library, ready to be applied.
+                        say the data workload was run and the results automatically stored in their library, ready to be
+                        applied.
                     </div>
                     <!--
                     <div class="text">
@@ -492,7 +494,7 @@
             <div class="content">
                 <div class="visuals reveal fade">
                     <img src="/img/refactor-2.png" alt="">
-                </div>    
+                </div>
                 <div class="descriptions reveal fade">
                     <div class="title">
                         Simplified cloud journey
@@ -528,7 +530,7 @@
                     -->
 
                 </div>
-                
+
             </div>
 
         </div>
@@ -543,7 +545,7 @@
                         Return on investment
                     </div>
                     <div class="subtitle">
-                        Protecting today and the future 
+                        Protecting today and the future
                     </div>
                     <div class="text">
                         Valluu is designed to leverage the companies investment
@@ -703,7 +705,7 @@
         </div>
     </section>
 
-    
+
 
     <!-- Questions  -->
 
