Adding vale logo to text and image as per thomas request

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </div>
                     <div class="text">
                         We have built the missing piece of the Kubernetes solution required to create an intelligent
-                        business solution, data workloads. The current stateless & stateful workloads create the power
+                        business solution, <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> data workloads. The current stateless & stateful workloads create the power
                         to leverage information technologies, such as cloud services, but stop at the
                         infrastructure capability level.
                     </div>
@@ -405,7 +405,7 @@
                         6PM
                         on Friday, when the weekend-price-status is set. The Underwriter then receives a
                         notification to
-                        say the data workload was run and the results automatically stored in their library, ready to be
+                        say the <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> data workload was run and the results automatically stored in their library, ready to be
                         applied.
                     </div>
                     <!--
@@ -691,7 +691,7 @@
                             <div>
                                 <h3 style="color: var(--vgreen); margin-top: 0;">Reduce CO<sub>2</sub> emissions
                                 </h3>
-                                <p>In running the Data Workloads associated with your inputs, Valluu could save
+                                <p>In running the <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> Data Workloads associated with your inputs, Valluu could save
                                     you
                                     <span id="elec-saving">0</span> kWh of electricity per annum.</b>
                                 </p>
