Update Valluu references in estimator section

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                             <div>
                                 <h3 style="color: var(--vgreen); margin-top: 0;">Reduce CO<sub>2</sub> emissions
                                 </h3>
-                                <p>In running the <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> Data Workloads associated with your inputs, Valluu could save
+                                <p>In running the <img src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px"> Data Workloads associated with your inputs, <img src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px"> could save
                                     you
                                     <span id="elec-saving">0</span> kWh of electricity per annum.</b>
                                 </p>
