--- a/index.html
+++ b/index.html
@@ -641,13 +641,13 @@
 
                         <div id="usecases">
                           <div class="category-group">
-                              <div class="usecase clickable" id="size-0" onclick="setPreset(0);" style="--c: #eeeeee;">
+                              <div class="usecase clickable" id="size-0" onclick="setPreset(0);">
                                   <div>Small</div>
                               </div>
-                              <div class="usecase clickable" id="size-1" onclick="setPreset(1);" style="--c: #eeeeee;">
+                              <div class="usecase clickable" id="size-1" onclick="setPreset(1);">
                                   <div>Medium</div>
                               </div>
-                              <div class="usecase clickable" id="size-2" onclick="setPreset(2);" style="--c: #eeeeee;">
+                              <div class="usecase clickable" id="size-2" onclick="setPreset(2);">
                                   <div>Large</div>
                               </div>
                           </div>
